--- a/package.json
+++ b/package.json
@@ -1,44 +1,179 @@
 {
-	"name": "vue-manage-system",
-	"version": "5.5.0",
-	"private": true,
-	"scripts": {
-		"dev": "vite",
-		"build": "vue-tsc --noEmit && vite build",
-		"serve": "vite preview"
-	},
-	"dependencies": {
-		"@element-plus/icons-vue": "*",
-		"@wangeditor/editor": "^5.1.23",
-		"@wangeditor/editor-for-vue": "^5.1.12",
-		"axios": "1.8.2",
-		"countup.js": "^2.8.0",
-		"echarts": "^5.5.0",
-		"echarts-wordcloud": "^2.1.0",
-		"element-plus": "^2.6.3",
-		"md-editor-v3": "^2.11.2",
-		"nprogress": "^0.2.0",
-		"pinia": "^2.1.7",
-		"vue": "^3.4.5",
-		"vue-cropper": "1.1.1",
-		"vue-echarts": "^6.6.9",
-		"vue-router": "^4.2.5",
-		"vue-schart": "^2.0.0",
-		"xlsx": "^0.18.5"
-	},
-	"devDependencies": {
-		"@vitejs/plugin-vue": "^3.0.0",
-		"@vue/compiler-sfc": "^3.1.2",
-		"typescript": "^4.6.4",
-		"unplugin-auto-import": "^0.11.2",
-		"unplugin-vue-components": "^0.22.4",
-		"vite": "^3.0.0",
-		"vite-plugin-vue-setup-extend": "^0.4.0",
-		"vue-tsc": "^0.38.4"
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not dead"
-	]
+  "name": "vue-manage-system-master",
+  "version": "1.0.0",
+  "description": "<a href=\"https://github.com/lin-xin/vue-manage-system/releases\">\r     <img src=\"https://img.shields.io/github/release/lin-xin/vue-manage-system.svg\" alt=\"GitHub release\">\r   </a>\r    <a href=\"https://github.com/lin-xin/vue-manage-system/blob/master/LICENSE\">\r     <img src=\"https://img.shields.io/github/license/mashape/apistatus.svg\" alt=\"license\">\r   </a>",
+  "main": "index.js",
+  "dependencies": {
+    "acorn": "^8.11.3",
+    "adler-32": "^1.3.1",
+    "anymatch": "^3.1.3",
+    "async-validator": "^4.2.5",
+    "asynckit": "^0.4.0",
+    "aws-ssl-profiles": "^1.1.2",
+    "axios": "^1.8.2",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.3.0",
+    "brace-expansion": "^2.0.1",
+    "braces": "^3.0.2",
+    "cfb": "^1.2.2",
+    "chokidar": "^3.6.0",
+    "codepage": "^1.15.0",
+    "combined-stream": "^1.0.8",
+    "compute-scroll-into-view": "^1.0.20",
+    "countup.js": "^2.8.0",
+    "crc-32": "^1.2.2",
+    "csstype": "^3.1.3",
+    "d": "^1.0.2",
+    "dayjs": "^1.11.10",
+    "debug": "^4.3.4",
+    "delayed-stream": "^1.0.0",
+    "denque": "^2.1.0",
+    "dom7": "^3.0.0",
+    "echarts": "^5.5.0",
+    "echarts-wordcloud": "^2.1.0",
+    "element-plus": "^2.7.0",
+    "entities": "^4.5.0",
+    "es5-ext": "^0.10.64",
+    "es6-iterator": "^2.0.3",
+    "es6-symbol": "^3.1.4",
+    "esbuild": "^0.25.8",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^5.0.0",
+    "esniff": "^2.0.1",
+    "estree-walker": "^2.0.2",
+    "event-emitter": "^0.3.5",
+    "ext": "^1.7.0",
+    "fast-glob": "^3.3.2",
+    "fastq": "^1.17.1",
+    "fill-range": "^7.0.1",
+    "follow-redirects": "^1.15.6",
+    "form-data": "^4.0.0",
+    "frac": "^1.1.2",
+    "function-bind": "^1.1.2",
+    "generate-function": "^2.3.1",
+    "glob-parent": "^5.1.2",
+    "hasown": "^2.0.2",
+    "html-void-elements": "^2.0.1",
+    "i18next": "^20.6.1",
+    "iconv-lite": "^0.6.3",
+    "immer": "^9.0.21",
+    "is-binary-path": "^2.1.0",
+    "is-core-module": "^2.13.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-hotkey": "^0.2.0",
+    "is-number": "^7.0.0",
+    "is-plain-object": "^5.0.0",
+    "is-property": "^1.0.2",
+    "is-url": "^1.2.4",
+    "jsonc-parser": "^3.2.1",
+    "local-pkg": "^0.4.3",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "lodash-unified": "^1.0.3",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.foreach": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
+    "lodash.toarray": "^4.4.0",
+    "long": "^5.3.2",
+    "lru-cache": "^7.18.3",
+    "lru.min": "^1.1.2",
+    "magic-string": "^0.27.0",
+    "md-editor-v3": "^2.11.3",
+    "memoize-one": "^6.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.5",
+    "mime-db": "^1.52.0",
+    "mime-match": "^1.0.2",
+    "mime-types": "^2.1.35",
+    "minimatch": "^5.1.6",
+    "mlly": "^1.6.1",
+    "ms": "^2.1.2",
+    "mysql2": "^3.14.2",
+    "named-placeholders": "^1.1.3",
+    "namespace-emitter": "^2.0.1",
+    "nanoid": "^3.3.11",
+    "next-tick": "^1.1.0",
+    "normalize-path": "^3.0.0",
+    "normalize-wheel-es": "^1.2.0",
+    "nprogress": "^0.2.0",
+    "path-parse": "^1.0.7",
+    "pathe": "^1.1.2",
+    "picocolors": "^1.1.1",
+    "picomatch": "^2.3.1",
+    "pinia": "^2.1.7",
+    "pkg-types": "^1.0.3",
+    "postcss": "^8.5.6",
+    "preact": "^10.20.2",
+    "prismjs": "^1.29.0",
+    "proxy-from-env": "^1.1.0",
+    "queue-microtask": "^1.2.3",
+    "readdirp": "^3.6.0",
+    "regenerator-runtime": "^0.14.1",
+    "resize-detector": "^0.3.0",
+    "resolve": "^1.22.8",
+    "reusify": "^1.0.4",
+    "rollup": "^4.45.1",
+    "run-parallel": "^1.2.0",
+    "safer-buffer": "^2.1.2",
+    "schart.js": "^3.0.4",
+    "scroll-into-view-if-needed": "^2.2.31",
+    "scule": "^1.3.0",
+    "seq-queue": "^0.0.5",
+    "slate": "^0.72.8",
+    "slate-history": "^0.66.0",
+    "snabbdom": "^3.6.2",
+    "source-map-js": "^1.2.1",
+    "sourcemap-codec": "^1.4.8",
+    "sqlstring": "^2.3.3",
+    "ssf": "^0.11.2",
+    "ssr-window": "^3.0.0",
+    "strip-literal": "^1.3.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tiny-warning": "^1.0.3",
+    "tinyglobby": "^0.2.14",
+    "to-regex-range": "^5.0.1",
+    "tslib": "^2.3.0",
+    "type": "^2.7.2",
+    "typescript": "^4.9.5",
+    "ufo": "^1.5.3",
+    "unimport": "^1.3.0",
+    "unplugin": "^1.10.1",
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^7.0.6",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
+    "vue": "^3.4.21",
+    "vue-cropper": "^1.1.1",
+    "vue-demi": "^0.14.7",
+    "vue-echarts": "^6.6.9",
+    "vue-router": "^4.3.0",
+    "vue-schart": "^2.0.0",
+    "vue-tsc": "^0.38.9",
+    "webpack-sources": "^3.2.3",
+    "webpack-virtual-modules": "^0.6.1",
+    "wildcard": "^1.1.2",
+    "wmf": "^1.0.2",
+    "word": "^0.3.0",
+    "xlsx": "^0.18.5",
+    "zrender": "^5.5.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yhazrin/vue-manage-system-master.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Yhazrin/vue-manage-system-master/issues"
+  },
+  "homepage": "https://github.com/Yhazrin/vue-manage-system-master#readme"
 }
