--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-	"name": "vue-manage-system",
+	"name": "Vita",
 	"version": "5.5.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite",
-		"build": "vue-tsc --noEmit && vite build",
-		"serve": "vite preview"
+		"dev": "vite --mode development",
+		"build": "vite build --mode production",
+		"preview": "vite preview --mode production"
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "*",
+		"@types/chart.js": "^4.0.1",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.12",
 		"axios": "1.8.2",
+		"chart.js": "^4.5.0",
 		"countup.js": "^2.8.0",
 		"echarts": "^5.5.0",
 		"echarts-wordcloud": "^2.1.0",
@@ -29,6 +31,7 @@
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^3.0.0",
 		"@vue/compiler-sfc": "^3.1.2",
+		"sass": "^1.89.2",
 		"typescript": "^4.6.4",
 		"unplugin-auto-import": "^0.11.2",
 		"unplugin-vue-components": "^0.22.4",
